chore: completed intro langchain tutorial

--- a/notebooks/langchain/llm_chain.ipynb
+++ b/notebooks/langchain/llm_chain.ipynb
@@ -1,18 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "raw",
-      "id": "63ee3f93",
-      "metadata": {
-        "id": "63ee3f93"
-      },
-      "source": [
-        "---\n",
-        "sidebar_position: 0\n",
-        "---"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "9316da0d",
       "metadata": {
@@ -85,6 +73,66 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!pip install -qU langchain & pip install -qU langchain-openai"
+      ],
+      "metadata": {
+        "id": "gfWgDVim1pCY",
+        "outputId": "d026647b-0f2f-4b50-8ef2-a5f3e3799f26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "gfWgDVim1pCY",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.0 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.5/1.0 MB\u001b[0m \u001b[31m15.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m16.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/60.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.9/60.9 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/580.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m580.2/580.2 kB\u001b[0m \u001b[31m19.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m75.9 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m35.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[33mWARNING: Ignoring invalid distribution ~angchain (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~angchain (/usr/local/lib/python3.11/dist-packages)\u001b[0m\u001b[33m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import getpass\n",
+        "import os\n",
+        "\n",
+        "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
+        "os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(prompt=\"Langsmith key:\")\n",
+        "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(prompt=\"OpenAI key:\")"
+      ],
+      "metadata": {
+        "id": "mJ8-MTI42HLa",
+        "outputId": "3a848a80-6726-462b-de95-d2ffbc917f06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "mJ8-MTI42HLa",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Langsmith key:··········\n",
+            "OpenAI key:··········\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "e5558ca9",
       "metadata": {
@@ -93,16 +141,12 @@
       "source": [
         "## Using Language Models\n",
         "\n",
-        "First up, let's learn how to use a language model by itself. LangChain supports many different language models that you can use interchangeably. For details on getting started with a specific model, refer to [supported integrations](/docs/integrations/chat/).\n",
-        "\n",
-        "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
-        "\n",
-        "<ChatModelTabs overrideParams={{openai: {model: \"gpt-4o-mini\"}}} />\n"
+        "First up, let's learn how to use a language model by itself. LangChain supports many different language models that you can use interchangeably. For details on getting started with a specific model, refer to [supported integrations](/docs/integrations/chat/).\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "e4b41234",
       "metadata": {
         "id": "e4b41234"
@@ -129,22 +173,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "1b2481f0",
       "metadata": {
         "id": "1b2481f0",
-        "outputId": "b8608f93-7d1f-49bf-f0df-db554826ee15"
+        "outputId": "e08884d2-fd8b-40d4-819e-67c9a4b391d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "AIMessage(content='Ciao!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 20, 'total_tokens': 23, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_0705bf87c0', 'finish_reason': 'stop', 'logprobs': None}, id='run-32654a56-627c-40e1-a141-ad9350bbfd3e-0', usage_metadata={'input_tokens': 20, 'output_tokens': 3, 'total_tokens': 23, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+              "AIMessage(content='Ciao!', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 4, 'prompt_tokens': 20, 'total_tokens': 24, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BCwSOSm00niKqcT1JmOFBwEfoJxbw', 'finish_reason': 'stop', 'logprobs': None}, id='run-86a14d92-0898-414f-8a45-7a5e6d6a28b5-0', usage_metadata={'input_tokens': 20, 'output_tokens': 4, 'total_tokens': 24, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
             ]
           },
-          "execution_count": 3,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ],
       "source": [
@@ -190,16 +237,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "0abb0863-bee7-448d-b013-79d8db01e330",
       "metadata": {
         "id": "0abb0863-bee7-448d-b013-79d8db01e330",
-        "outputId": "6c4ae4ea-1875-4119-ebca-b580996176ce"
+        "outputId": "5afc1256-63fc-489c-c309-191442702e17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "|C|iao|!||"
           ]
@@ -231,7 +281,7 @@
         "\n",
         "Right now we are passing a list of messages directly into the language model. Where does this list of messages come from? Usually, it is constructed from a combination of user input and application logic. This application logic usually takes the raw user input and transforms it into a list of messages ready to pass to the language model. Common transformations include adding a system message or formatting a template with the user input.\n",
         "\n",
-        "[Prompt templates](/docs/concepts/prompt_templates/) are a concept in LangChain designed to assist with this transformation. They take in raw user input and return data (a prompt) that is ready to pass into a language model.\n",
+        "[Prompt templates](https://python.langchain.com/docs/concepts/prompt_templates/) are a concept in LangChain designed to assist with this transformation. They take in raw user input and return data (a prompt) that is ready to pass into a language model.\n",
         "\n",
         "Let's create a prompt template here. It will take in two user variables:\n",
         "\n",
@@ -241,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "3e73cc20",
       "metadata": {
         "id": "3e73cc20"
@@ -264,7 +314,7 @@
         "id": "7e876c2a"
       },
       "source": [
-        "Note that `ChatPromptTemplate` supports multiple [message roles](/docs/concepts/messages/#role) in a single template. We format the `language` parameter into the system message, and the user `text` into a user message."
+        "Note that `ChatPromptTemplate` supports multiple [message roles](https://python.langchain.com/docs/concepts/messages/#role) in a single template. We format the `language` parameter into the system message, and the user `text` into a user message."
       ]
     },
     {
@@ -279,26 +329,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "f781b3cb",
       "metadata": {
         "id": "f781b3cb",
-        "outputId": "127803b1-bf23-4f85-b88d-d184cca3887b"
+        "outputId": "de5c14ee-8372-4a63-bb59-22dbf31dcb33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "ChatPromptValue(messages=[SystemMessage(content='Translate the following from English into Italian', additional_kwargs={}, response_metadata={}), HumanMessage(content='hi!', additional_kwargs={}, response_metadata={})])"
+              "ChatPromptValue(messages=[SystemMessage(content='Translate the following from English into German', additional_kwargs={}, response_metadata={}), HumanMessage(content='how are you doing?', additional_kwargs={}, response_metadata={})])"
             ]
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 16
         }
       ],
       "source": [
-        "prompt = prompt_template.invoke({\"language\": \"Italian\", \"text\": \"hi!\"})\n",
+        "prompt = prompt_template.invoke({\"language\": \"German\", \"text\": \"how are you doing?\"})\n",
         "\n",
         "prompt"
       ]
@@ -315,23 +368,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "2159b619",
       "metadata": {
         "id": "2159b619",
-        "outputId": "8290e9b8-d14d-42a6-9a3e-a4d80e310a0d"
+        "outputId": "e5a71205-dabf-4406-f874-03c2b2cb8d4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[SystemMessage(content='Translate the following from English into Italian', additional_kwargs={}, response_metadata={}),\n",
-              " HumanMessage(content='hi!', additional_kwargs={}, response_metadata={})]"
+              "[SystemMessage(content='Translate the following from English into German', additional_kwargs={}, response_metadata={}),\n",
+              " HumanMessage(content='how are you doing?', additional_kwargs={}, response_metadata={})]"
             ]
           },
-          "execution_count": 7,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 17
         }
       ],
       "source": [
@@ -350,18 +406,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "3a509d8c-e122-4641-b9ee-91bc23aa155a",
       "metadata": {
         "id": "3a509d8c-e122-4641-b9ee-91bc23aa155a",
-        "outputId": "5d4ebb8f-21b4-4c44-ecbe-87e29c33e413"
+        "outputId": "49627164-fc96-4094-a6bb-7fafdff3dd56",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Ciao!\n"
+            "Wie geht es dir?\n"
           ]
         }
       ],
@@ -378,10 +437,10 @@
       },
       "source": [
         ":::tip\n",
-        "Message `content` can contain both text and [content blocks](/docs/concepts/messages/#aimessage) with additional structure. See [this guide](/docs/how_to/output_parser_string/) for more information.\n",
+        "Message `content` can contain both text and [content blocks](https://python.langchain.com/docs/concepts/messages/#content) with additional structure.\n",
         ":::\n",
         "\n",
-        "If we take a look at the [LangSmith trace](https://smith.langchain.com/public/3ccc2d5e-2869-467b-95d6-33a577df99a2/r), we can see exactly what prompt the chat model receives, along with [token](/docs/concepts/tokens/) usage information, latency, [standard model parameters](/docs/concepts/chat_models/#standard-parameters) (such as temperature), and other information."
+        "If we take a look at the [LangSmith trace](https://smith.langchain.com/public/3ccc2d5e-2869-467b-95d6-33a577df99a2/r), we can see exactly what prompt the chat model receives, along with [token](/docs/concepts/tokens/) usage information, latency, [standard model parameters](https://python.langchain.com/docs/concepts/chat_models/#standard-parameters) (such as temperature), and other information."
       ]
     },
     {
@@ -397,17 +456,22 @@
         "\n",
         "This just scratches the surface of what you will want to learn to become a proficient AI Engineer. Luckily - we've got a lot of other resources!\n",
         "\n",
-        "For further reading on the core concepts of LangChain, we've got detailed [Conceptual Guides](/docs/concepts).\n",
-        "\n",
-        "If you have more specific questions on these concepts, check out the following sections of the how-to guides:\n",
-        "\n",
-        "- [Chat models](/docs/how_to/#chat-models)\n",
-        "- [Prompt templates](/docs/how_to/#prompt-templates)\n",
+        "For further reading on the core concepts of LangChain, we've got detailed [Conceptual Guides](https://python.langchain.com/docs/concepts/).\n",
         "\n",
         "And the LangSmith docs:\n",
         "\n",
         "- [LangSmith](https://docs.smith.langchain.com)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GKRCfjM3qLc-"
+      },
+      "id": "GKRCfjM3qLc-",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
