feat: completed extraction tutorial

--- a/notebooks/langchain/extraction.ipynb
+++ b/notebooks/langchain/extraction.ipynb
@@ -87,6 +87,63 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!pip install -qU langchain-openai langsmith"
+      ],
+      "metadata": {
+        "id": "-XrS1G4Uv80p",
+        "outputId": "09155558-abf8-4f11-b05a-eccfef217e09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "-XrS1G4Uv80p",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/60.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.9/60.9 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/351.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m348.2/351.9 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m351.9/351.9 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m35.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import getpass\n",
+        "import os\n",
+        "\n",
+        "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
+        "os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(prompt = \"Langsmith Key\")\n",
+        "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(prompt = \"OpenAI KEY: \")"
+      ],
+      "metadata": {
+        "id": "3mcTE3vLvvDZ",
+        "outputId": "5053d955-8768-42d5-d2e6-87da44d63bfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "3mcTE3vLvvDZ",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Langsmith Key··········\n",
+            "OpenAI KEY: ··········\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "54d6b970-2ea3-4192-951e-21237212b359",
       "metadata": {
@@ -102,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "c141084c-fb94-4093-8d6a-81175d688e40",
       "metadata": {
         "id": "c141084c-fb94-4093-8d6a-81175d688e40"
@@ -157,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "a5e490f6-35ad-455e-8ae4-2bae021583ff",
       "metadata": {
         "id": "a5e490f6-35ad-455e-8ae4-2bae021583ff"
@@ -208,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "77c1311c-5252-41d6-83e6-fdb40b172e47",
       "metadata": {
         "id": "77c1311c-5252-41d6-83e6-fdb40b172e47"
@@ -225,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "04d846a6-d5cb-4009-ac19-61e3aac0177e",
       "metadata": {
         "id": "04d846a6-d5cb-4009-ac19-61e3aac0177e"
@@ -247,26 +304,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "dd42a935-022f-4860-b9e0-84268f55b22a",
       "metadata": {
         "id": "dd42a935-022f-4860-b9e0-84268f55b22a",
-        "outputId": "e5898395-4644-4d0f-9176-c6956b0526f3"
+        "outputId": "baffe5fc-09b8-4929-825d-7300c034bd1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Person(name='Alan Smith', hair_color='blond', height_in_meters='1.83')"
+              "Person(name='Javier Smith', hair_color='dark', height_in_meters='1.7374')"
             ]
           },
-          "execution_count": 8,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 11
         }
       ],
       "source": [
-        "text = \"Alan Smith is 6 feet tall and has blond hair.\"\n",
+        "text = \"Javier Smith is 5.7 feet tall and I'm not sure about the color of his hair but people tell me its dark\"\n",
         "prompt = prompt_template.invoke({\"text\": text})\n",
         "structured_llm.invoke(prompt)"
       ]
@@ -305,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "591a0c16-7a17-4883-91ee-0d6d2fdb265c",
       "metadata": {
         "id": "591a0c16-7a17-4883-91ee-0d6d2fdb265c"
@@ -358,22 +418,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "83ecf0db-757b-4ae3-a9d2-eb1c9f6b2631",
       "metadata": {
         "id": "83ecf0db-757b-4ae3-a9d2-eb1c9f6b2631",
-        "outputId": "1564b082-ad0b-44e5-f79c-40bb1637a8de"
+        "outputId": "f3173129-f2bf-4bc1-ebbc-cf73bdaaba66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Data(people=[Person(name='Jeff', hair_color='black', height_in_meters='1.83'), Person(name='Anna', hair_color='black', height_in_meters=None)])"
             ]
           },
-          "execution_count": 10,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 13
         }
       ],
       "source": [
@@ -416,16 +479,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "0bb138d7-116e-4542-aa5f-bebf0c301ec6",
       "metadata": {
         "id": "0bb138d7-116e-4542-aa5f-bebf0c301ec6",
-        "outputId": "22d43c66-5ff3-4659-ec76-5c73ad891691"
+        "outputId": "d802b45d-ef7b-4c3a-8b08-4cc3c80c0889",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "7\n"
           ]
@@ -470,12 +536,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "c604e476-a2be-4eda-b128-71399e280732",
       "metadata": {
-        "id": "c604e476-a2be-4eda-b128-71399e280732"
+        "id": "c604e476-a2be-4eda-b128-71399e280732",
+        "outputId": "00edcb6f-3e29-41c3-efff-384acd98986a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-15-f29d97645946>:23: LangChainBetaWarning: The function `tool_example_to_messages` is in beta. It is actively being worked on, so the API may change.\n",
+            "  messages.extend(tool_example_to_messages(txt, [tool_call], ai_response=ai_response))\n"
+          ]
+        }
+      ],
       "source": [
         "from langchain_core.utils.function_calling import tool_example_to_messages\n",
         "\n",
@@ -514,24 +593,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "628f67dd-aee0-4200-ac38-24a9fb16f1d1",
       "metadata": {
         "id": "628f67dd-aee0-4200-ac38-24a9fb16f1d1",
-        "outputId": "a428e950-4c5a-4df7-a961-37587e15f00c"
+        "outputId": "576c98b8-9965-441c-8559-9980bd1f7340",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "================================\u001b[1m Human Message \u001b[0m=================================\n",
             "\n",
             "The ocean is vast and blue. It's more than 20,000 feet deep.\n",
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "Tool Calls:\n",
-            "  Data (d8f2e054-7fb9-417f-b28f-0447a775b2c3)\n",
-            " Call ID: d8f2e054-7fb9-417f-b28f-0447a775b2c3\n",
+            "  Data (acc7c808-d9d0-4615-a66a-ffd7251bcf73)\n",
+            " Call ID: acc7c808-d9d0-4615-a66a-ffd7251bcf73\n",
             "  Args:\n",
             "    people: []\n",
             "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -545,8 +627,8 @@
             "Fiona traveled far from France to Spain.\n",
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "Tool Calls:\n",
-            "  Data (0178939e-a4b1-4d2a-a93e-b87f665cdfd6)\n",
-            " Call ID: 0178939e-a4b1-4d2a-a93e-b87f665cdfd6\n",
+            "  Data (399ad23c-9d88-4df4-9139-39cc67677534)\n",
+            " Call ID: 399ad23c-9d88-4df4-9139-39cc67677534\n",
             "  Args:\n",
             "    people: [{'name': 'Fiona', 'hair_color': None, 'height_in_meters': None}]\n",
             "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -575,22 +657,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "6b73d4e2-d18d-4d47-89ec-99b5eb6b234f",
       "metadata": {
         "id": "6b73d4e2-d18d-4d47-89ec-99b5eb6b234f",
-        "outputId": "9fb99791-88b7-4286-f044-1d6d760ad7a9"
+        "outputId": "0893ac88-5e4c-48c3-b4a0-4be7cc6468e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Data(people=[Person(name='Earth', hair_color='None', height_in_meters='0.00')])"
+              "Data(people=[Person(name='Earth', hair_color=None, height_in_meters=None)])"
             ]
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 26
         }
       ],
       "source": [
@@ -617,22 +702,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "eb1b3a99-4750-45bc-ad28-5d12751ed9f8",
       "metadata": {
         "id": "eb1b3a99-4750-45bc-ad28-5d12751ed9f8",
-        "outputId": "7185051d-9541-474a-bbe5-6a9a0e762332"
+        "outputId": "910d6d39-2a20-48bd-dad7-1b1ec25abdd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Data(people=[])"
             ]
           },
-          "execution_count": 16,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 27
         }
       ],
       "source": [
